--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "AngryWolf"
 version = "0.1.0"
 edition = "2021"
+authors = ["Cat"]
+description = "Console utility to output file into console"
+license = "MIT"
+documentation = "https://github.com/Vova-max-png/AngryWolf"
+repository = "https://github.com/Vova-max-png/AngryWolf"
+categories = ["Command line utilities"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
